# jembe-io-examples

./: .flaskenv  README.md  pyproject.toml
instance/: config.py
jembe_io_examples/: __init__.py  commands.py  db.py  jmb.py
jembe_io_examples/components/: __init__.py  create.py  crud_list_records.py  delete.py  edit.py  form.py  list_records.py  notifications.py  page.py  view.py
jembe_io_examples/models/: __init__.py  note.py  project.py
jembe_io_examples/pages/: __init__.py  demo_reusable.py  projects.py  projects_editable.py  projects_paginated.py  projects_reusable.py
jembe_io_examples/templates/: index.html  projects.html  projects_editable.html  projects_paginated.html
jembe_io_examples/templates/components/: create.html  crud_list_records.html  delete.html  list_records.html  notifications.html  page.html  view.html
jembe_io_examples/templates/projects_editable/: _list.html  edit.html
jembe_io_examples/views/: __init__.py
tests/: conftest.py
